--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,17 +1,14 @@
-# Resolve react_native_pods.rb with node to allow for hoisting
-require Pod::Executable.execute_command('node', ['-p',
-  'require.resolve(
-    "react-native/scripts/react_native_pods.rb",
-    {paths: [process.argv[1]]},
-  )', __dir__]).strip
+require File.join(__dir__, '../node_modules/react-native/scripts/react_native_pods')
 
-platform :ios, min_ios_version_supported
+platform :ios, '13.0'  # Set the minimum iOS version explicitly
 prepare_react_native_project!
 
 linkage = ENV['USE_FRAMEWORKS']
-if linkage != nil
+if linkage
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
   use_frameworks! :linkage => linkage.to_sym
+else
+  use_frameworks! :linkage => :static  # Use static by default
 end
 
 target 'FashionEcommerceApp' do
@@ -19,8 +16,7 @@ target 'FashionEcommerceApp' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    # An absolute path to your application root.
-    :app_path => "#{Pod::Config.instance.installation_root}/.."
+    :app_path => "#{Pod::Config.instance.installation_root}/.."  # Specify app root
   )
 
   target 'FashionEcommerceAppTests' do
@@ -29,12 +25,10 @@ target 'FashionEcommerceApp' do
   end
 
   post_install do |installer|
-    # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
       installer,
       config[:reactNativePath],
       :mac_catalyst_enabled => false,
-      # :ccache_enabled => true
     )
   end
 end
